[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/structures/building_workbench.png" type="Texture" id=1]
[ext_resource path="res://src/Building_Workbench.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 16 )

[node name="Building_Workbench" type="StaticBody2D" groups=["notify_click", "saveable"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, 24 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 24 )
shape = SubResource( 1 )

[node name="Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 48.0
margin_bottom = 48.0
button_mask = 2

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 24, 24 )
shape = SubResource( 2 )

[connection signal="pressed" from="Button" to="." method="_on_pressed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hit"]
